add layout of OrderDetailActivity

--- a/app/src/main/res/layout/activity_make_order.xml
+++ b/app/src/main/res/layout/activity_make_order.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="@string/tv_greetings"
+        android:text="@string/tv_greetings_label"
         android:textAlignment="center"
         android:textColor="#78909C"
         android:textSize="24sp"
@@ -48,7 +48,7 @@
         android:id="@+id/tvAdditives"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tv_additives"
+        android:text="@string/tv_additives_label"
         android:textAlignment="center"
         android:textColor="#78909C"
         android:textSize="24sp"
@@ -93,7 +93,7 @@
         android:id="@+id/tvDrinkType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tv_drink_type"
+        android:text="@string/tv_drink_type_label"
         android:textAlignment="center"
         android:textColor="#78909C"
         android:textSize="24sp"
