--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -1,8 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".OrderDetailActivity">
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/tvName"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp"
+            android:text="@string/tv_name" />
+
+        <TextView
+            android:id="@+id/tvNameValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp" />
+
+        <TextView
+            android:id="@+id/tvDrink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp"
+            android:text="@string/tv_drink" />
+
+        <TextView
+            android:id="@+id/tvDrinkValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp" />
+
+        <TextView
+            android:id="@+id/tvDrinkType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp"
+            android:text="@string/tv_drink_type" />
+
+        <TextView
+            android:id="@+id/tvDrinkTypeValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp" />
+
+        <TextView
+            android:id="@+id/tvAdditives"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp"
+            android:text="@string/tv_additives" />
+
+        <TextView
+            android:id="@+id/tvAdditivesValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:layout_margin="24dp" />
+
+    </LinearLayout>
+</ScrollView>
